fixed navbar flickering issue

--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,10 @@ i {
 
 nav ul li a:hover {
   color: #000000;
-  transform: scale(1.2);
   background: linear-gradient(to top left, #edfc4890 30%, #f4d01e 20%);
-  margin-left: 30px;
-  margin-right: 30px;
-  transform: translateY(20px);
+  transform: scale(1.2) translateY(10px);
 }
+
 
 .navbar nav .checkbut {
   font-size: 30px;
@@ -96,8 +94,15 @@ nav ul li a:hover {
   }
   
   nav ul li a {
-    font-size: 16px;
+    color: rgb(252, 250, 250);
+    font-size: 15px;
+    padding: 10px 28px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    transition: color 0.3s ease, transform 0.3s ease, background 0.3s ease;
+    text-decoration: none;
   }
+  
 }
 
 @media (max-width: 858px) {
